--- a/Index.html
+++ b/Index.html
@@ -14,31 +14,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
-
-    <style>
-        .fondo {
-            height: 100vh;
-            background: url('https://wallpaperplay.com/walls/full/d/1/c/128193.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
-
-        }
-
-        .gris {
-            background: rgba(0, 0, 0, 0.253);
-        }
-
-        .top-nav-collapse {
-            background: rgba(0, 0, 0, 0.74) !important;
-        }
-
-        .body {
-            background: black;
-        }
-        .card-body{
-            background: 50%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
 
 
 </head>
@@ -158,6 +135,39 @@
     <br>
     <br>
     <br>
+
+    <!-- CODIGO DE LOGIN 
+
+
+    <div class="modal-dialog text-center">
+        <div class="col-sm-10 main-section-userlog">
+            <div class="modal-content">
+                <div class="col-12 user-img-userlog">
+                  
+                    <img src="Imagenes/Login_Image.png">
+                </div>
+                <form class="col-12">
+                    <div class="form-group" id="user-name-userlog">
+                        <input type="text" class="form-control" placeholder="Usuario">
+                    </div>
+
+                    <div class="form-group" id="user-pass-userlog">
+                        <input type="password" class="form-control" placeholder="Contrasena">
+                    </div>
+                    <button type="submit" class="btn btn-outline-success">Ingresar</button>
+
+                </form>
+                <br>
+                <div class="col-12 forgot-userlog">
+                    <a href="#" class="forgot-userlog-text">Olvide Contrasena?</a>
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
+    -->
+
+    
     <br>
     <br>
     <br>
