--- a/Index.html
+++ b/Index.html
@@ -47,11 +47,11 @@
                 <ul class="nav navbar-nav nav-flex-icons ml-auto">
                     <li class="nav-item">
                         <a class="nav-link"><i class="far fa-comments"></i> <span
-                                class="clearfix d-none d-sm-inline-block">Support</span></a>
+                                class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"><i class="fas fa-user"></i> <span
-                                class="clearfix d-none d-sm-inline-block">Account</span></a>
+                                class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
                 </ul>
