--- a/Index.html
+++ b/Index.html
@@ -32,17 +32,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="/contacto.html">Contacto</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
+
                 </ul>
                 <ul class="nav navbar-nav nav-flex-icons ml-auto">
                     <li class="nav-item">
@@ -50,7 +48,7 @@
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"><i class="fas fa-user"></i> <span
+                        <a class="nav-link" href="/Login.html"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
@@ -126,126 +124,7 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <!-- CODIGO DE LOGIN 
-
-
-    <div class="modal-dialog text-center">
-        <div class="col-sm-10 main-section-userlog">
-            <div class="modal-content">
-                <div class="col-12 user-img-userlog">
-                  
-                    <img src="Imagenes/Login_Image.png">
-                </div>
-                <form class="col-12">
-                    <div class="form-group" id="user-name-userlog">
-                        <input type="text" class="form-control" placeholder="Usuario">
-                    </div>
-
-                    <div class="form-group" id="user-pass-userlog">
-                        <input type="password" class="form-control" placeholder="Contrasena">
-                    </div>
-                    <button type="submit" class="btn btn-outline-success">Ingresar</button>
-
-                </form>
-                <br>
-                <div class="col-12 forgot-userlog">
-                    <a href="#" class="forgot-userlog-text">Olvide Contrasena?</a>
-                </div>
-                <br>
-            </div>
-        </div>
-    </div>
-    -->
-
-    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
+ 
 
 
     <!-- JQuery -->
