--- a/Login.html
+++ b/Login.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">Inicio </a>
+                        <a class="nav-link" href="/Index.html">Inicio </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
@@ -70,7 +70,7 @@
                             </div>
                             <form class="col-12">
                                 <div class="form-group" id="user-name-userlog">
-                                    <input type="text" class="form-control" placeholder="Usuario">
+                                    <input type="text" class="form-control" placeholder="Correo Electronico">
                                 </div>
 
                                 <div class="form-group" id="user-pass-userlog">
@@ -83,6 +83,7 @@
                             <div class="col-12 forgot-userlog">
                                 <a href="#" class="forgot-userlog-text">Olvide Contrasena?</a>
                             </div>
+                            <!--  localhost:3000/user/login-->
                             <br>
                         </div>
                     </div>
