--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Login.html"><i class="fas fa-user"></i> <span
+                        <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
