--- a/Login.html
+++ b/Login.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="/Index.html">Inicio </a>
+                        <a class="nav-link" href="Index.html">Inicio </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
@@ -55,10 +55,10 @@
         </div>
 
     </nav>
-
+    <div class="fondo"></div>
 
     <center>
-        <div class="fondo">
+        
 
             <div class="logincss">
                 <div class="modal-dialog text-center">
