--- a/Login.html
+++ b/Login.html
@@ -55,11 +55,9 @@
         </div>
 
     </nav>
-    <div class="fondo"></div>
+    <div class="fondo">
 
     <center>
-        
-
             <div class="logincss">
                 <div class="modal-dialog text-center">
                     <div class="col-sm-10 main-section-userlog">
