--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/productos.html">Productos</a>
+                        <a class="nav-link" href="LeoUpdates.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contacto.html">Contacto</a>
@@ -120,10 +120,7 @@
 
     </section>
 
-    <br>
-    <br>
-    <br>
-    <br>
+
  
 
 
