--- a/LeoUpdates.html
+++ b/LeoUpdates.html
@@ -59,44 +59,105 @@
 <center>
     <div class="fondo">
        <br>
-            <div class="Productos">
+
+        <div class="row row_principal">
+
+            <div class="col-12 filtros">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Todo
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Fruta
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> Verdura
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option4" autocomplete="off"> Procesado
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option5" autocomplete="off"> Jumbo
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option6" autocomplete="off"> Unimarc
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option7" autocomplete="off"> Lider
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option8" autocomplete="off"> Proteina
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option9" autocomplete="off"> Conservante
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option10" autocomplete="off"> Antioxidante
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="option11" autocomplete="off"> Sustituto
+                  </label>
+                </div>
+                
+
+            </div>
+            <div class="col-11 Productos">
 
                 <!-- FILAS Y COLUMNAS DE PRODUCTOS -->
                 <div class="column">
-                    <div class="row">
-                        <div class="col-3 Product">
-                            <div class="card">
+                    <div class="row row1">
+                        <div class="col-2 Product">
+                            <div class="card card_product">
                                 <img src="Imagenes/Productos/SL.png" alt="LechePascual">
                                 <div class="text product-name">
-                                     <h3>L</h3>
+                                     <h3 class="p-name">Yogurt de Soya</h3>
+                                     <h4 class="price">$ 1.200</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                                 </div>
                             </div>
                         </div>
 
 
-                        <div class="col-3 Product">
-                            <div class="card">
+                        <div class="col-2 Product">
+                            <div class="card card_product">
                                 <img src="Imagenes/Productos/VM.png" alt="LechePascual">
                                 <div class="text product-name">
-                                     <h3>L</h3>
+                                      <h3 class="p-name">Carne Vegana</h3>
+                                     <h4 class="price">$ 3.400</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-3 Product">
-                            <div class="card">
+                        <div class="col-2 Product">
+                            <div class="card card_product">
                                 <img src="Imagenes/Productos/Mango.jpg" alt="LechePascual">
                                 <div class="text product-name">
-                                     <h3>L</h3>
+                                      <h3 class="p-name">Cubos de Mango</h3>
+                                     <h4 class="price">$ 5.300</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                                 </div>
                             </div>                
                         </div>
 
-                        <div class="col-3 Product">
-                            <div class="card">
+                        <div class="col-2 Product">
+                            <div class="card card_product">
+                                <img src="Imagenes/Productos/Loma.png" alt="LechePascual">
+                                <div class="text product-name">
+                                     <h3 class="p-name">Loma</h3>
+                                     <h4 class="price">$ 1.200</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
+                                </div>
+                            </div>                
+                        </div>
+
+                        <div class="col-2 Product">
+                            <div class="card card_product">
                                 <img src="Imagenes/Productos/LDA.png" alt="LechePascual">
                                 <div class="text product-name">
-                                     <h3>L</h3>
+                                      <h3 class="p-name">Leche de Avena</h3>
+                                     <h4 class="price">$ 1.800</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                                 </div>
                             </div>                
                         </div>
@@ -107,73 +168,70 @@
 
 
             <div class="column">
-                <div class="row">
-                    <div class="col-3 Product">
-                        <div class="card">
-                            <img src="Imagenes/Productos/SL.png" alt="LechePascual">
+                <div class="row row2">
+                    <div class="col-2 Product">
+                        <div class="card card_product">
+                            <img src="Imagenes/Productos/Crema de Coco.png" alt="LechePascual">
                             <div class="text product-name">
-                                 <h3>L</h3>
+                                  <h3 class="p-name">Crema de Coco</h3>
+                                     <h4 class="price">$ 1.200</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>                            
+                                </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-2 Product">
+                        <div class="card card_product">
+                            <img src="Imagenes/Productos/PV.png" alt="LechePascual">
+                            <div class="text product-name">
+                                  <h3 class="p-name">Proteina Vegana</h3>
+                                     <h4 class="price">$ 1.000</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                             </div>
                         </div>
                     </div>
 
 
-                    <div class="col-3 Product">
-                        <div class="card">
-                            <img src="Imagenes/Productos/VM.png" alt="LechePascual">
+                    <div class="col-2 Product">
+                        <div class="card card_product">
+                            <img src="Imagenes/Productos/VQ.png" alt="LechePascual">
                             <div class="text product-name">
-                                 <h3>L</h3>
+                                  <h3 class="p-name">Queso Vegano</h3>
+                                     <h4 class="price">$ 2.200</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-3 Product">
-                        <div class="card">
-                            <img src="Imagenes/Productos/Mango.jpg" alt="LechePascual">
+
+
+                    <div class="col-2 Product">
+                        <div class="card card_product">
+                            <img src="Imagenes/Productos/Aceite de Palta.png" alt="LechePascual">
                             <div class="text product-name">
-                                 <h3>L</h3>
+                                  <h3 class="p-name">Aceite de Palta</h3>
+                                     <h4 class="price">$ 1.200</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                             </div>
                         </div>                
                     </div>
 
-                    <div class="col-3 Product">
-                        <div class="card">
-                            <img src="Imagenes/Productos/LDA.png" alt="LechePascual">
+                    <div class="col-2 Product">
+                        <div class="card card_product">
+                            <img src="Imagenes/Productos/Papa y guisantes.png" alt="LechePascual">
                             <div class="text product-name">
-                                 <h3>L</h3>
+                                  <h3 class="p-name">Papa y Guisantes</h3>
+                                     <h4 class="price">$ 900</h4>
+                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
                             </div>
                         </div>                
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+
+        </div>
+            
         </div>
     </div>
 
