--- a/Login.html
+++ b/Login.html
@@ -75,6 +75,7 @@
                                     <input type="password" class="form-control" placeholder="Contrasena">
                                 </div>
                                 <button type="submit" class="btn btn-outline-success">Ingresar</button>
+                                <button type="submit" class="btn btn-outline-success">Registrarse</button>
 
                             </form>
                             <br>
