Interface Agregar Producto

--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="LeoUpdates.html">Productos</a>
+                        <a class="nav-link" href="Catalogo.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contacto.html">Contacto</a>
@@ -49,7 +49,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
-                                class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
+                                class="clearfix d-none d-sm-inline-block" href="Login.html">Iniciar Sesion</span></a>
                     </li>
 
                 </ul>
