Revert "Interface Agregar Producto"
This reverts commit a24588f2367a774c9a656f8077255ffe945c7bdf.

--- a/Login.html
+++ b/Login.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="Index.html">Inicio </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Catalogo.html">Productos</a>
+                        <a class="nav-link" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
@@ -44,9 +44,9 @@
                         <a class="nav-link"><i class="far fa-comments"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
-                                class="clearfix d-none d-sm-inline-block" href="Login.html">Iniciar Sesion</span></a>
+                    <li class="nav-item active">
+                        <a class="nav-link"><i class="fas fa-user"></i> <span
+                                class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
                 </ul>
