--- a/ListProductos.html
+++ b/ListProductos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vper - Login</title>
+    <title>Vper - Listado</title>
 
 
     <!-- Font Awesome -->
@@ -31,7 +31,7 @@
                     <li class="nav-item ">
                         <a class="nav-link" href="Index.html">Inicio </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
@@ -44,7 +44,7 @@
                         <a class="nav-link"><i class="far fa-comments"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
@@ -68,10 +68,10 @@
                     <input type="radio" name="options" id="option1" autocomplete="off" checked> Todo
                   </label>
                   <label class="btn btn-secondary">
-                    <input type="radio" name="options" id="option2" autocomplete="off"> Fruta
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Galletas
                   </label>
                   <label class="btn btn-secondary">
-                    <input type="radio" name="options" id="option3" autocomplete="off"> Verdura
+                    <input type="radio" name="options" id="option3" autocomplete="off"> Congelados
                   </label>
                   <label class="btn btn-secondary">
                     <input type="radio" name="options" id="option4" autocomplete="off"> Procesado
@@ -83,7 +83,7 @@
                     <input type="radio" name="options" id="option6" autocomplete="off"> Unimarc
                   </label>
                   <label class="btn btn-secondary">
-                    <input type="radio" name="options" id="option7" autocomplete="off"> Lider
+                    <input type="radio" name="options" id="option7" autocomplete="off"> Sin Gluten
                   </label>
                   <label class="btn btn-secondary">
                     <input type="radio" name="options" id="option8" autocomplete="off"> Proteina
@@ -155,7 +155,7 @@
                             <div class="card card_product">
                                 <img src="Imagenes/Productos/LDA.png" alt="LechePascual">
                                 <div class="text product-name">
-                                      <h3 class="p-name">Leche de Avena</h3>
+                                      <h3 class="p-name">Leche de Almendra  </h3>
                                      <h4 class="price">$ 1.800</h4>
                                     <button type="button" class="btn btn-secondary buy_button">Link</button>
                                 </div>
