--- a/ListProductos.html
+++ b/ListProductos.html
@@ -101,7 +101,7 @@
                 
 
             </div>
-            <div class="col-11 Productos">
+            <div class="col-11 Productos-catalogo">
 
                 <!-- FILAS Y COLUMNAS DE PRODUCTOS -->
                 <div class="column">
