--- a/AgregarProducto.html
+++ b/AgregarProducto.html
@@ -52,6 +52,11 @@
                         <a class="nav-link"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Ricardo Milos</span></a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link"><i class="fas fa-bell"></i> <span
+                                class="clearfix d-none d-sm-inline-block">0</span></a>
+                    </li>
+
 
                 </ul>
 
@@ -70,7 +75,7 @@
         <p class="lead mb-0">Muchas gracias de parte del equipo Vper</p>
     </div>
 </div>
-      
+ 
   <div class="col-11 model-content">
 
                 <!-- FILAS Y COLUMNAS DE PRODUCTOS -->
@@ -94,6 +99,9 @@
 
                                  <div class="form-group" id="user-name-userlog">
                                     <input type="text" class="form-control" placeholder="Valor de producto en CLP $">
+                                </div>
+                                <div class="form-group" id="user-name-userlog">
+                                    <input type="text" class="form-control" placeholder="Link Directo al producto">
                                 </div>
 
 
