--- a/Fake_SinGluten.html
+++ b/Fake_SinGluten.html
@@ -39,15 +39,25 @@
                     </li>
 
                 </ul>
-                <ul class="nav navbar-nav nav-flex-icons ml-auto">
+                </ul>
+                  <ul class="nav navbar-nav nav-flex-icons ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link"><i class="far fa-comments"></i> <span
-                                class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
+                        <a class="nav-link"><span
+                                class="clearfix d-none d-sm-inline-block">Salir</span></a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item">
+                        <a class="nav-link"><span
+                                class="clearfix d-none d-sm-inline-block">Subir Productos</span></a>
+                    </li>
+                    <li class="nav-item active">
                         <a class="nav-link"><i class="fas fa-user"></i> <span
-                                class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
+                                class="clearfix d-none d-sm-inline-block">Ricardo Milos</span></a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link"><i class="fas fa-bell"></i> <span
+                                class="clearfix d-none d-sm-inline-block">0</span></a>
+                    </li>
+
 
                 </ul>
             </div>
@@ -64,7 +74,7 @@
 
             <div class="col-12 filtros">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-secondary active">
+                  <label class="btn btn-secondary">
                     <div onClick="window.location = 'ListProductos.html';">
                     <input type="radio" name="options" id="option1" autocomplete="off" checked> Todo
                   </div>
@@ -94,7 +104,7 @@
                     <input type="radio" name="options" id="option6" autocomplete="off"> Unimarc
                   </div>
                   </label>
-                  <label class="btn btn-secondary">
+                  <label class="btn btn-secondary active">
                     <input type="radio" name="options" id="option7" autocomplete="off"> Sin Gluten
                   </label>
                   <label class="btn btn-secondary">
@@ -217,19 +227,6 @@
 
                     <div class="col-2 Product">
                         <div class="card card_product">
-                            <img src="Imagenes/Productos/VQ.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Queso Vegano</h3>
-                                     <h4 class="price">$ 2.200</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="col-2 Product">
-                        <div class="card card_product">
                             <img src="Imagenes/Productos/Aceite de Palta.png" alt="LechePascual">
                             <div class="text product-name">
                                   <h3 class="p-name">Aceite de Palta</h3>
@@ -239,20 +236,9 @@
                         </div>                
                     </div>
 
+
+
                     <div class="col-2 Product">
-                        <div class="card card_product">
-                            <img src="Imagenes/Productos/Papa y guisantes.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Papa y Guisantes</h3>
-                                     <h4 class="price">$ 900</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                            </div>
-                        </div>                
-                    </div>
-                </div>
-                 <div class="column">
-                <div class="row row2">
-                   <div class="col-2 Product">
                         <div class="card card_product">
                             <img src="Imagenes/Productos/MV.png" alt="LechePascual">
                             <div class="text product-name">
@@ -263,6 +249,8 @@
                         </div>                
                     </div>
 
+                    
+                </div>
             </div>
 
         </div>
