--- a/Fake_Sustituto.html
+++ b/Fake_Sustituto.html
@@ -64,7 +64,7 @@
 
             <div class="col-12 filtros">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-secondary active">
+                  <label class="btn btn-secondary">
                     <div onClick="window.location = 'ListProductos.html';">
                     <input type="radio" name="options" id="option1" autocomplete="off" checked> Todo
                   </div>
@@ -106,7 +106,7 @@
                   <label class="btn btn-secondary">
                     <input type="radio" name="options" id="option10" autocomplete="off"> Antioxidante
                   </label>
-                  <label class="btn btn-secondary">
+                  <label class="btn btn-secondary active">
                     <div onClick="window.location = 'Fake_Sustituto.html';">
                     <input type="radio" name="options" id="option11" autocomplete="off"> Sustituto
                   </div>
@@ -120,102 +120,30 @@
                 <!-- FILAS Y COLUMNAS DE PRODUCTOS -->
                 <div class="column">
                     <div class="row row1">
-                        <div class="col-2 Product">
-                            <div class="card card_product">
-                                <img src="Imagenes/Productos/SL.png" alt="LechePascual">
-                                <div class="text product-name">
-                                     <h3 class="p-name">Yogurt de Soya</h3>
-                                     <h4 class="price">$ 1.200</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <div class="col-2 Product">
+                        <<div class="col-2 Product">
                             <div class="card card_product">
                                 <img src="Imagenes/Productos/VM.png" alt="LechePascual">
                                 <div class="text product-name">
                                       <h3 class="p-name">Carne Vegana</h3>
                                      <h4 class="price">$ 3.400</h4>
-                                     <div onClick="window.location = 'Productos/CarneVegana.html';">
                                     <button type="button" class="btn btn-secondary buy_button">Link</button>
-                                  </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-2 Product">
-                            <div class="card card_product">
-                                <img src="Imagenes/Productos/Mango.jpg" alt="LechePascual">
-                                <div class="text product-name">
-                                      <h3 class="p-name">Cubos de Mango</h3>
-                                     <h4 class="price">$ 5.300</h4>
-                                      <div onClick="window.location = '#';">
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                                  </div>
-                                </div>
-                            </div>                
-                        </div>
-
-                        <div class="col-2 Product">
-                            <div class="card card_product">
-                                <img src="Imagenes/Productos/Loma.png" alt="LechePascual">
-                                <div class="text product-name">
-                                     <h3 class="p-name">Loma</h3>
-                                     <h4 class="price">$ 1.200</h4>
-                                     <div onClick="window.location = '#';">
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                                  </div>
-                                </div>
-                            </div>                
-                        </div>
 
                         <div class="col-2 Product">
                             <div class="card card_product">
                                 <img src="Imagenes/Productos/LDA.png" alt="LechePascual">
                                 <div class="text product-name">
-                                      <h3 class="p-name">Leche de Almendra  </h3>
+                                      <h3 class="p-name">Leche de Almendra</h3>
                                      <h4 class="price">$ 1.800</h4>
-                                      <div onClick="window.location = 'Productos/LechedeAlmendra.html';">
                                     <button type="button" class="btn btn-secondary buy_button">Link</button>
-                                  </div>
                                 </div>
                             </div>                
                         </div>
-                    </div>
-                </div>
 
-
-
-
-            <div class="column">
-                <div class="row row2">
-                    <div class="col-2 Product">
-                        <div class="card card_product">
-                            <img src="Imagenes/Productos/Crema de Coco.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Crema de Coco</h3>
-                                     <h4 class="price">$ 1.200</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>                            
-                                </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-2 Product">
-                        <div class="card card_product">
-                            <img src="Imagenes/Productos/PV.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Proteina Vegana</h3>
-                                     <h4 class="price">$ 1.000</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-2 Product">
+                        <div class="col-2 Product">
                         <div class="card card_product">
                             <img src="Imagenes/Productos/VQ.png" alt="LechePascual">
                             <div class="text product-name">
@@ -225,44 +153,7 @@
                             </div>
                         </div>
                     </div>
-
-
-
-                    <div class="col-2 Product">
-                        <div class="card card_product">
-                            <img src="Imagenes/Productos/Aceite de Palta.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Aceite de Palta</h3>
-                                     <h4 class="price">$ 1.200</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                            </div>
-                        </div>                
-                    </div>
-
-                    <div class="col-2 Product">
-                        <div class="card card_product">
-                            <img src="Imagenes/Productos/Papa y guisantes.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Papa y Guisantes</h3>
-                                     <h4 class="price">$ 900</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                            </div>
-                        </div>                
-                    </div>
-                </div>
-                 <div class="column">
-                <div class="row row2">
-                   <div class="col-2 Product">
-                        <div class="card card_product">
-                            <img src="Imagenes/Productos/MV.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Mayoneza Vegana</h3>
-                                     <h4 class="price">$ 2.000</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                            </div>
-                        </div>                
-                    </div>
-
+ 
             </div>
 
         </div>
