--- a/Productos/CarneVegana.html
+++ b/Productos/CarneVegana.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="LeoUpdates.html">Productos</a>
+                            <a class="nav-link" href="../ListProductos.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contacto.html">Contacto</a>
@@ -72,7 +72,7 @@
                     <!--Grid column-->
                     <div class="col-md-6 mb-4">
 
-                        <img src="img/LDA.png" class="img-fluid" alt="">
+                        <img src="../Imagenes/Productos/VM.png" class="img-fluid" alt="">
 
                     </div>
                     <!--Grid column-->
@@ -88,25 +88,22 @@
                                     <span class="badge purple mr-1">Sin gluten</span>
                                 </a>
                                 <a href="">
-                                    <span class="badge blue mr-1">Organico</span>
+                                    <span class="badge blue mr-1">Suplemento</span>
                                 </a>
                                 <a href="">
-                                    <span class="badge red mr-1">Leche vegetal</span>
+                                    <span class="badge red mr-1">Sustituto</span>
                                 </a>
                             </div>
 
                             <p class="lead">
-                                <span>Leche de almendra - natura</span>
+                                <span>Carne Vegana</span>
                             </p>
 
                             <p class="lead font-weight-bold">Ingredientes</p>
 
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor suscipit libero eos
-                                atque
-                                quia ipsa
-                                sint voluptatibus!
-                                Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.
-                            </p>
+                            <p>38% Aislado de proteína de guisante (100% Pisane® C9) -maltodextrina, 5,6% inulina, cacao en polvo (Theobroma cacao L.), 5% aislado de proteína de arroz, fructosa, citrato tripotásico, 3,5% harina hiperproteica de quinoa (Chenopodium quinoa), 3,3% semilla de girasol en polvo, 3% proteína de cáñamo, aroma (aroma de chocolate), 2,4% ácido linoleico conjugado en polvo (CLA), fosfato tricálcico, polidextrosa, 1,8% harina de
+                            semilla de calabaza desgrasada, 1,8% ModCarb™ (salvado de avena (Avena sativa)(sin gluten), quinoa (Chenopodium quinoa), amaranto (Amaranthus hypocondriacus), trigo sarraceno (Fagopyrum Esculentum)(sin gluten), mijo (Panicum miliaceum)), 1,8% QuinoaTrim™ (Quinoa (Chenopodium quinoa))
+                        </p>
 
                             </form>
 
@@ -124,7 +121,7 @@
                 <!--Grid row-->
                 <div class="row d-flex justify-content-center wow fadeIn">
 
-                        <div class="fb-comments" data-href="https:/www.pencalabs.com/ data-width="" data-numposts="5"></div>
+                        <div class="fb-comments" data-href="https:/www.pencalabs.com/ data-width=" data-numposts="5"></div>
                 </div>
 
 
@@ -141,11 +138,7 @@
         <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
 
-            <!--Copyright-->
-            <div class="footer-copyright py-3">
-                © 2019 Copyright:
-                <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> MDBootstrap.com </a>
-            </div>
+
             <!--/.Copyright-->
 
         </footer>
