--- a/Registro.html
+++ b/Registro.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Vper - Login</title>
 
-    <title>Vper - Alpha</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -16,12 +16,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
-
-
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg  navbar-dark gris fixed-top scrolling-navbar">
         <div class="container">
             <a class="navbar-brand" href="#">Vper</a>
@@ -31,24 +28,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="Index.html">Inicio </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ListProductos.html">Productos</a>
+                        <a class="nav-link" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contacto.html">Contacto</a>
+                        <a class="nav-link" href="#">Contacto</a>
                     </li>
 
                 </ul>
                 <ul class="nav navbar-nav nav-flex-icons ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="Registro.html"><i class="far fa-comments"></i> <span
+                        <a class="nav-link"><i class="far fa-comments"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
+                    <li class="nav-item active">
+                        <a class="nav-link"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
@@ -58,71 +55,46 @@
         </div>
 
     </nav>
+    <div class="fondo">
 
+    <center>
+            <div class="logincss">
+                <div class="modal-dialog text-center">
+                    <div class="col-sm-10 main-section-userlog">
+                        <div class="modal-content">
+                            <div class="col-12 user-img-userlog">
 
-    <section class="fondo">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <!-- Mask & flexbox options-->
-        <div class=" d-flex justify-content-center align-items-center">
-
-            <!-- Content -->
-            <div class="container">
-
-                <!--Grid row-->
-                <div class="row wow fadeIn">
-
-                    <!--Grid column-->
-                    <div class="col-md-6 mb-4 white-text text-center text-md-left">
-
-                        <h2>El Primer Listado de Productos veganos en Chile!</h2>
-                        <br>
-                        <br>
-                        <br>
-
-                        <button class="btn blue-gradient btn-lg">Conocelo aqui!</button>
-
-
-
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-md-6 col-xl-5 mb-4">
-
-                        <!--Card-->
-                        <div class="card">
-
-                            <!--Card content-->
-                            <div class="card-body">
-
-                                <h2>Mas de XX.XXX Productos ya registrados</h2>
-
+                                <img src="Imagenes/Login_Image.png">
                             </div>
-
+                            <form class="col-12" action="Cuenta_Creada.html">
+                                <div class="form-group" id="user-name-userlog">
+                                    <input type="text" class="form-control" placeholder="Correo Electronico">
+                                </div>
+                                <div class="form-group" id="user-pass-userlog">
+                                    <input type="password" class="form-control" placeholder="Nombre de usuario">
+                                </div>
+                                <div class="form-group" id="user-pass-userlog">
+                                    <input type="password" class="form-control" placeholder="Contrasena">
+                                </div>
+                                  <button type="submit" class="btn btn-outline-success">Registrar Cuenta</button>
+                            </form>
+                            <br>
+                            <div class="col-12 forgot-userlog">
+                                <a href="#" class="forgot-userlog-text">Olvide Contrasena?</a>
+                            </div>
+                            <!--  localhost:3000/user/login-->
+                            <br>
                         </div>
-                        <!--/.Card-->
-
                     </div>
-                    <!--Grid column-->
-
                 </div>
-                <!--Grid row-->
-
             </div>
-            <!-- Content -->
-
         </div>
-        <!-- Mask & flexbox options-->
-
-    </section>
+    </center>
 
 
- 
 
+
+    <!-- COSAS DEL BOOTSTRAP-->
 
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -135,7 +107,6 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
-
 </body>
 
 </html>
