--- a/Registro.html
+++ b/Registro.html
@@ -71,7 +71,7 @@
                                     <input type="text" class="form-control" placeholder="Correo Electronico">
                                 </div>
                                 <div class="form-group" id="user-pass-userlog">
-                                    <input type="password" class="form-control" placeholder="Nombre de usuario">
+                                    <input type="text" class="form-control" placeholder="Nombre de usuario">
                                 </div>
                                 <div class="form-group" id="user-pass-userlog">
                                     <input type="password" class="form-control" placeholder="Contrasena">
