--- a/Fake_Jumbo.html
+++ b/Fake_Jumbo.html
@@ -45,7 +45,7 @@
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link"><i class="fas fa-user"></i> <span
+                        <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
@@ -95,7 +95,9 @@
                   </div>
                   </label>
                   <label class="btn btn-secondary">
+                    <div onClick="window.location = 'Fake_SinGluten.html';">
                     <input type="radio" name="options" id="option7" autocomplete="off"> Sin Gluten
+                  </div>
                   </label>
                   <label class="btn btn-secondary">
                     <input type="radio" name="options" id="option8" autocomplete="off"> Proteina
@@ -138,7 +140,9 @@
                                 <div class="text product-name">
                                       <h3 class="p-name">Carne Vegana</h3>
                                      <h4 class="price">$ 3.400</h4>
+                                     <div onClick="window.location = 'Productos/CarneVegana.html';">
                                     <button type="button" class="btn btn-secondary buy_button">Link</button>
+                                  </div>
                                 </div>
                             </div>
                         </div>
