--- a/ListProductos.html
+++ b/ListProductos.html
@@ -45,7 +45,7 @@
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link"><i class="fas fa-user"></i> <span
+                        <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
@@ -95,7 +95,9 @@
                   </div>
                   </label>
                   <label class="btn btn-secondary">
+                    <div onClick="window.location = 'Fake_SinGluten.html';">
                     <input type="radio" name="options" id="option7" autocomplete="off"> Sin Gluten
+                  </div>
                   </label>
                   <label class="btn btn-secondary">
                     <input type="radio" name="options" id="option8" autocomplete="off"> Proteina
@@ -250,22 +252,7 @@
                         </div>                
                     </div>
                 </div>
-                 <div class="column">
-                <div class="row row2">
-                   <div class="col-2 Product">
-                        <div class="card card_product">
-                            <img src="Imagenes/Productos/MV.png" alt="LechePascual">
-                            <div class="text product-name">
-                                  <h3 class="p-name">Mayoneza Vegana</h3>
-                                     <h4 class="price">$ 2.000</h4>
-                                    <button type="button" class="btn btn-secondary buy_button">Link</button>
-                            </div>
-                        </div>                
-                    </div>
-
-            </div>
-
-        </div>
+                 
             
         </div>
     </div>
