--- a/Productos/MayonesaVegana.html
+++ b/Productos/MayonesaVegana.html
@@ -44,17 +44,27 @@
                         </li>
 
                     </ul>
-                    <ul class="nav navbar-nav nav-flex-icons ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link"><i class="far fa-comments"></i> <span
-                                    class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Login.html"><i class="fas fa-user"></i> <span
-                                    class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
-                        </li>
+                     </ul>
+                  <ul class="nav navbar-nav nav-flex-icons ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link"><span
+                                class="clearfix d-none d-sm-inline-block">Salir</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"><span
+                                class="clearfix d-none d-sm-inline-block">Subir Productos</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link"><i class="fas fa-user"></i> <span
+                                class="clearfix d-none d-sm-inline-block">Ricardo Milos</span></a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link"><i class="fas fa-bell"></i> <span
+                                class="clearfix d-none d-sm-inline-block">0</span></a>
+                    </li>
 
-                    </ul>
+
+                </ul>
                 </div>
 
             </div>
@@ -88,10 +98,7 @@
                                     <span class="badge purple mr-1">Sin gluten</span>
                                 </a>
                                 <a href="">
-                                    <span class="badge blue mr-1">Organico</span>
-                                </a>
-                                <a href="">
-                                    <span class="badge red mr-1">Leche vegetal</span>
+                                    <span class="badge blue mr-1">Antioxidante</span>
                                 </a>
                             </div>
 
@@ -102,7 +109,7 @@
                             <p class="lead font-weight-bold">Ingredientes</p>
 
                             <p>
-                                Agua, azúcar de caña, almendra (2%), estabilizantes (goma gelana y goma garrofín), fosfato tricálcico, sal, emulgente (lecitina de girasol), aroma, antioxidante (extracto rico en tocoferoles) y vitamina D. Alérgenos en negrita.
+                                Mayonesa super vegana 3000.
                             </p>
                             <div>
                                 <p>Valor: $2.000</p>
