--- a/AgregarProductoFake.html
+++ b/AgregarProductoFake.html
@@ -45,7 +45,7 @@
                                 class="clearfix d-none d-sm-inline-block">Salir</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link "href="AgregarProducto.html"><span
+                        <a class="nav-link"><span
                                 class="clearfix d-none d-sm-inline-block">Subir Productos</span></a>
                     </li>
                     <li class="nav-item active">
@@ -83,17 +83,17 @@
                     <div class="row">
                         <div class="col-4 Product">
                             <div class="card card_product-add">
-                                <img id="imgSalida" width="50%" height="50%" text="No Image" />
+                                <img src="Imagenes/Productos/MV.png" />
                                 <input class="boton-add" name="file-input" id="file-input" type="file" />
                                 <br>
                                 <div class="text product-name">
                                 </div>
                             </div>
                         </div>
-                       		<div class="col-4 Info-Product">
+                          <div class="col-4 Info-Product">
 
 
-                         		 <div class="form-group" id="user-name-userlog">
+                             <div class="form-group" id="user-name-userlog">
                                     <input type="text" class="form-control" placeholder="Nombre producto">
                                 </div>
 
@@ -115,10 +115,10 @@
 
 
 
-                            	<div class="col-4 Info-Product-Sup"
+                              <div class="col-4 Info-Product-Sup"
                                 ><div class="class-product">
-                                	 <div onClick="window.location = 'AgregarProductoFake.html';">
-                                	<button type="button" class="btn btn-secondary">Categoria</button></div>
+                                   <div onClick="window.location = 'AgregarProductoFake.html';">
+                                  <button type="button" class="btn btn-secondary">Categoria</button></div>
                                 </div>
                                   <div class="checkbox">
                                 <label>
@@ -173,8 +173,9 @@
                                 </label>
                               
                               </div>
-
+                              <div onClick="window.location = 'Aprobacion.html';">
                                 <button type="button" class="btn btn-success">Upload</button>
+                              </div>
                                 </div>
 
                       </div>
@@ -192,6 +193,26 @@
 
 </center>
         
+
+
+
+
+    <!-- COSAS DEL BOOTSTRAP-->
+
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
+</body>
+
+</html>
 
 
 
