--- a/Cuenta_Creada.html
+++ b/Cuenta_Creada.html
@@ -41,11 +41,11 @@
                 </ul>
                 <ul class="nav navbar-nav nav-flex-icons ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link"><i class="far fa-comments"></i> <span
+                        <a class="nav-link" href="Registro.html"><i class="far fa-comments"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link"><i class="fas fa-user"></i> <span
+                        <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
@@ -66,9 +66,9 @@
 
                                 <img src="Imagenes/Login_Image.png">
                             </div>
-                            <form class="col-12" action="index.html">
+                            <form class="col-12" action="Login.html">
                                 <p>Cuenta creada exitosamente, ahora puede iniciar sesion con su nueva cuenta.</p> 
-                                  <button type="submit" class="btn btn-outline-success">Regresar a inicio</button>
+                                  <button type="submit" class="btn btn-outline-success">Ok!</button>
                             </form>
                             <br>
                             <div class="col-12 forgot-userlog">
