--- a/ListProductosFake.html
+++ b/ListProductosFake.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="Index.html">Inicio </a>
+                        <a class="nav-link" href="IndexFake.html">Inicio </a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Productos</a>
