--- a/Productos/CarneVegana.html
+++ b/Productos/CarneVegana.html
@@ -17,7 +17,9 @@
 
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous"
-        src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v4.0&appId=141353882612850&autoLogAppEvents=1"></script>
+        src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v4.0&appId=141353882612850&autoLogAppEvents=1"></script><div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v4.0&appId=404510343527877&autoLogAppEvents=1"></script>
+    </head>
 </head>
 
 <body class="detail-product">
@@ -34,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../Index.html">Inicio <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../ListProductos.html">Productos</a>
@@ -166,5 +168,7 @@
     </section>
 
 </body>
+
+ <div class="fb-comments" data-href="the-permalink" data-width="" data-numposts="5"></div>
 
 </html>
