--- a/Productos/MayonesaVegana.html
+++ b/Productos/MayonesaVegana.html
@@ -34,10 +34,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../IndexFake.html">Inicio <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../ListProductos.html">Productos</a>
+                            <a class="nav-link" href="../ListProductosFake.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contacto.html">Contacto</a>
