--- a/Registro.html
+++ b/Registro.html
@@ -41,11 +41,11 @@
                 </ul>
                 <ul class="nav navbar-nav nav-flex-icons ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link"><i class="far fa-comments"></i> <span
+                        <a class="nav-link" href="Registro.html"><i class="far fa-comments"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Registrarse</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link"><i class="fas fa-user"></i> <span
+                        <a class="nav-link" href="Login.html"><i class="fas fa-user"></i> <span
                                 class="clearfix d-none d-sm-inline-block">Iniciar Sesion</span></a>
                     </li>
 
